--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
   player.position.set(0, 0.5, 0);
   scene.add(player);
 
+  // Test NPC rendered from a canvas texture
+  function createNPC() {
+    const size = 64;
+    const canvas = document.createElement('canvas');
+    canvas.width = size;
+    canvas.height = size;
+    const ctx = canvas.getContext('2d');
+
+    // Face background
+    ctx.fillStyle = '#ffffaa';
+    ctx.fillRect(0, 0, size, size);
+
+    // Eyes
+    ctx.fillStyle = '#000000';
+    ctx.fillRect(16, 20, 8, 8);
+    ctx.fillRect(40, 20, 8, 8);
+
+    // Mouth
+    ctx.fillStyle = '#ff0000';
+    ctx.fillRect(24, 40, 16, 8);
+
+    const texture = new THREE.CanvasTexture(canvas);
+    const material = new THREE.SpriteMaterial({ map: texture, transparent: true });
+    const sprite = new THREE.Sprite(material);
+    sprite.position.set(5, 0.5, 5);
+    sprite.scale.set(2, 2, 1);
+    return sprite;
+  }
+
+  const npc = createNPC();
+  scene.add(npc);
+
   camera.position.set(0, 10, 20);
   camera.lookAt(player.position);
 
